2010-03-07  Kent Tamura  <tkent@chromium.org>

Reviewed by Eric Seidel.

        Fix a bug that validity.valueMissing for a radio button with required
        in a form element always returns true.
        https://bugs.webkit.org/show_bug.cgi?id=35472

        Add tests for radio buttons in a form element, and merge an existing
        radio button test to ValidityState-valueMissing-radio.html.

        * fast/forms/ValidityState-valueMissing-007-expected.txt: Removed.
        * fast/forms/ValidityState-valueMissing-007.html: Removed.
        * fast/forms/ValidityState-valueMissing-radio-expected.txt: Added.
        * fast/forms/ValidityState-valueMissing-radio.html: Added.
        * fast/forms/script-tests/ValidityState-valueMissing-radio.js: Added.

2010-03-07  Kent Tamura  <tkent@chromium.org>

        Reviewed by Eric Seidel.

        Fix a bug that validity.valueMissing for a radio button with required
        in a form element always returns true.
        https://bugs.webkit.org/show_bug.cgi?id=35472

        Test: fast/forms/ValidityState-valueMissing-radio.html

        * html/HTMLInputElement.cpp:
        (WebCore::checkedRadioButtons): Move the location to be used by valueMissing().
        (WebCore::HTMLInputElement::valueMissing):
          Use checkedRadioButtons() instead of document()->checkedRadioButtons().

git-svn-id: svn://svn.chromium.org/blink/trunk@55640 bbb929c8-8fbe-4397-9dbb-9b2b20218538